challenge10/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodbchallenge-deployment
  namespace: hmahjoub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodbchallenge8
  template:
    metadata:
      labels:
        app: mongodbchallenge8
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        command: ["mongod", "--bind_ip", "0.0.0.0"]
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: mongodbchallenge-service
  namespace: hmahjoub
spec:
  selector:
    app: mongodbchallenge8
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
