challenge10/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdbchallenge-deployment
  namespace: hmahjoub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdbchallenge8
  template:
    metadata:
      labels:
        app: webdbchallenge8
    spec:
      containers:
      - name: webdb
        image: hadilmahjoub/webdbchallenge8:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: webdbchallenge-service
  namespace: hmahjoub
spec:
  selector:
    app: webdbchallenge8
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
