challenge10/webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb-deployment
  namespace: hmahjoub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: hadilmahjoub/webnodbchallenge7:latest
        ports:
        - containerPort: 5000
        command: ["flask", "--app", "app_without_db", "run", "--host=0.0.0.0"]
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: hmahjoub
spec:
  selector:
    app: webnodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
